--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-timer-hook": "^3.0.5",
     "react-window": "^1.8.7",
     "react-zoom-pan-pinch": "^2.1.3",
+    "recharts": "^2.6.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "simplebar": "^5.3.8",
