--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "react-simple-maps": "^3.0.0",
     "react-slick": "^0.28.1",
     "react-spring": "^9.4.3",
     "react-swipeable-views": "^0.14.0",
@@ -79,6 +80,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
     "react-timer-hook": "^3.0.5",
+    "react-tooltip": "^4.5.1",
     "react-window": "^1.8.7",
     "react-zoom-pan-pinch": "^2.1.3",
     "recharts": "^2.6.2",
